# hrm-jax

./: .gitignore  README.md  build_dataset.py  main.py  pyproject.toml
hrm/: __init__.py  dataset.py  layers.py  losses.py  model.py
