[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hrm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "jax",
    "jaxlib",
    "equinox",
    "optax",
    "numpy",
    "tyro",
    "tqdm",
    "wandb",
]

[tool.setuptools]
packages = ["hrm"]